# OFF2025-autosplitter

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
