[package]
name = "off2025-autosplitter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/livesplit/asr", features = ["derive", "unity", "integer-vars", "float-vars"] }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
indexmap = "2.13.0"
log = "0.4.29"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
